tests/snapshots/help__list_help.snap
---
source: tests/help.rs
expression: text
---
List known directories as tab-separated lines

Usage: furet list [OPTIONS]

Options:
      --all    Also list directories missing from disk, with a presence column
  -p, --paths  Print only the path of each directory
  -h, --help   Print help
