tests/snapshots/help__mark_help.snap
---
source: tests/help.rs
expression: text
---
Manage numbered marks (aliases named 1-9)

Usage: furet mark <COMMAND>

Commands:
  set     Set a mark on a directory, overwriting it silently
  list    List marks as tab-separated lines, by digit
  delete  Delete a mark or a range of marks (2 or 2-4); silent on unset marks
  next    Print the directory of the next mark, wrapping from 9 to 1
  prev    Print the directory of the previous mark, wrapping from 1 to 9
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
