tests/snapshots/help__mark_list_help.snap
---
source: tests/help.rs
expression: text
---
List marks as tab-separated lines, by digit

Usage: furet mark list

Options:
  -h, --help  Print help
