tests/snapshots/help__mark_next_help.snap
---
source: tests/help.rs
expression: text
---
Print the directory of the next mark, wrapping from 9 to 1

Usage: furet mark next

Options:
  -h, --help  Print help
