tests/snapshots/help__query_help.snap
---
source: tests/help.rs
expression: text
---
Rank recorded directories and print the best match, falling back to a disk walk (SPEC section 11) when nothing matches

Usage: furet query [OPTIONS] [QUERY]

Arguments:
  [QUERY]  Query text; quote it when it contains spaces [default: ""]

Options:
      --list             Print every ranked candidate, best first; an empty query lists by recency instead
      --explain          Print the scoring report on stderr and jump nowhere
      --color            Wrap every `--list` path in its `LS_COLORS` directory color
      --no-ignore        Disable gitignore rules in the disk fallback walk (SPEC section 11)
  -l, --local            Restrict candidates to the current git project (nearest ancestor with a .git entry)
      --home             Restrict candidates to the home directory (config `home`, else the user profile)
      --engine <ENGINE>  Stage-1 matching engine; overrides the `engine` key of config.toml [possible values: reference, nucleo]
  -h, --help             Print help
